--- a/src/main/resources/templates/contents/settings.html
+++ b/src/main/resources/templates/contents/settings.html
@@ -10,6 +10,18 @@
         <div class="py-3 px-2">
             <h2 class="text-center">설정</h2>
             <ul class="list-group list-group-flush border-bottom">
+                <a class="list-group-item d-flex" th:href="@{/account_bank/settings/budget}">
+                    <img class="me-3 setting-icon" th:src="@{/images/settings/add_budget_icon.png}" alt="add budget icon">
+                    <span>예산관리</span>
+                </a>
+            </ul>
+            <ul class="list-group list-group-flush border-bottom">
+                <a class="list-group-item d-flex" th:href="@{/account_bank/settings/budget_history}">
+                    <img class="me-3 setting-icon" th:src="@{/images/settings/view_budget_icon.png}" alt="add budget icon">
+                    <span>예산보기</span>
+                </a>
+            </ul>
+            <ul class="list-group list-group-flush border-bottom">
                 <a class="list-group-item d-flex" th:href="@{/user/logout}">
                     <img class="me-3 setting-icon" th:src="@{/images/settings/logout_icon.png}" alt="logout icon">
                     <span>로그아웃</span>
