상수 추가 예산 상세 보기 추가 캘린더 지출 표시 추가 코드 정리 및 오류 수정

--- a/src/main/resources/static/css/budget.css
+++ b/src/main/resources/static/css/budget.css
@@ -8,6 +8,15 @@
     width: 48px;
 }
 
+.history-icon {
+    width: 36px;
+}
+
+.history-container > div > span,
+.history-container > span {
+    font-size: 24px;
+}
+
 /* register */
 .form-check {
     padding-left: 0;
@@ -33,5 +42,26 @@
     .budget-category-icon,
     .target-icon {
         width: 36px;
+    }
+
+    .history-container > div > span,
+    .history-container > span {
+        font-size: 1rem;
+    }
+
+    .history-icon {
+        width: 24px;
+    }
+}
+
+/* Galaxy Note 10+ */
+@media (412px <= width < 820px) {
+    .history-container > div > span,
+    .history-container > span {
+        font-size: 1rem;
+    }
+
+    .history-icon {
+        width: 24px;
     }
 }
