--- a/src/main/resources/templates/contents/account_book/calendar.html
+++ b/src/main/resources/templates/contents/account_book/calendar.html
@@ -8,6 +8,10 @@
     <th:block layout:fragment="contents">
         <div class="d-flex flex-column h-100vh">
             <div id="calendar" class="p-2"></div>
+            <div class="d-flex justify-content-end pe-2">
+                <span>지출 : </span>
+                <span id="totalMoney" class="ms-2">0원</span>
+            </div>
             <div id="itemContainer" class="item-container px-3 py-3"></div>
         </div>
     </th:block>
