--- a/src/main/resources/templates/contents/member/login.html
+++ b/src/main/resources/templates/contents/member/login.html
@@ -25,14 +25,15 @@
                                             </div>
                                             <div class="col-12">
                                                 <div class="form-floating mb-3">
-                                                    <input type="password" class="form-control" name="password" id="password" value="" placeholder="Password" required>
+                                                    <input type="password" class="form-control" name="password" id="password"
+                                                           value="" placeholder="Password" autocomplete="off" required>
                                                     <label for="password" class="form-label">Password</label>
                                                 </div>
                                             </div>
                                             <div class="col-12">
                                                 <div class="d-flex gap-2 justify-content-between">
                                                     <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe">
+                                                        <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" value="true">
                                                         <label class="form-check-label text-secondary" for="rememberMe">
                                                             Keep me logged in
                                                         </label>
