--- a/src/main/resources/templates/contents/settings/budget/detail.html
+++ b/src/main/resources/templates/contents/settings/budget/detail.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <th:block layout:fragment="contents">
-        <form method="post" th:object="${budget}">
+        <form method="post" th:object="${budget}" id="updateForm">
+            <input type="hidden" name="id" th:value="${budget.id}">
             <div class="p-3">
                 <div class="mb-3">
                     <input type="number" class="form-control border-0 border-bottom" min="0" th:field="*{money}"
@@ -15,7 +16,7 @@
                 <div>
                     <button type="submit" class="btn btn-success">수정</button>
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">삭제</button>
-                    <a type="button" class="btn btn-secondary" role="button" th:href="@{/account_bank/settings/budget}">취소</a>
+                    <a type="button" class="btn btn-secondary" role="button" href="javascript:history.back()">취소</a>
                 </div>
             </div>
         </form>
