--- a/src/main/resources/templates/contents/settings/budget/register.html
+++ b/src/main/resources/templates/contents/settings/budget/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <th:block layout:fragment="contents">
-        <form method="post" th:object="${budget}">
+        <form method="post" th:object="${budget}" id="registerForm">
             <div class="p-3">
                 <div class="mb-3">
                     <input type="number" class="form-control border-0 border-bottom" min="0" th:field="*{money}"
@@ -22,7 +22,7 @@
                                        th:checked="${category.id == budget.categoryId} ? 'true'">
                                 <label class="form-check-label" th:for="|categoryRadio${category.id}|">
                                     <div class="d-flex flex-column align-items-center">
-                                        <img class="target-icon" th:src="@{|/images/category/${category.categoryIcon}|}">
+                                        <img class="target-icon" th:src="@{/images/category/{icon}(icon=${category.categoryIcon})}">
                                         <span th:text="${category.name}">name</span>
                                     </div>
                                 </label>
@@ -35,7 +35,7 @@
                 <hr/>
                 <div>
                     <button type="submit" class="btn btn-success">저장</button>
-                    <a type="button" class="btn btn-secondary" role="button" th:href="@{/account_bank/settings/budget}">취소</a>
+                    <a type="button" class="btn btn-secondary" role="button" href="javascript:history.back()">취소</a>
                 </div>
             </div>
         </form>
