--- a/src/main/resources/templates/contents/settings/list.html
+++ b/src/main/resources/templates/contents/settings/list.html
@@ -17,8 +17,14 @@
             </ul>
             <ul class="list-group list-group-flush border-bottom">
                 <a class="list-group-item d-flex" th:href="@{/account_bank/settings/budget_history}">
-                    <img class="me-3 setting-icon" th:src="@{/images/settings/view_budget_icon.png}" alt="add budget icon">
+                    <img class="me-3 setting-icon" th:src="@{/images/settings/view_budget_icon.png}" alt="view budget icon">
                     <span>예산보기</span>
+                </a>
+            </ul>
+            <ul class="list-group list-group-flush border-bottom">
+                <a class="list-group-item d-flex" th:href="@{/account_bank/settings/grocery_shopping}">
+                    <img class="me-3 setting-icon" th:src="@{/images/settings/grocery_shopping_icon.png}" alt="grocery shopping icon">
+                    <span>장보기</span>
                 </a>
             </ul>
             <ul class="list-group list-group-flush border-bottom">
