--- a/src/main/resources/templates/contents/account_bank/detail.html
+++ b/src/main/resources/templates/contents/account_bank/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/base_layout}">
 <head>
-    <title>가계부 등록</title>
+    <title>가계부 정보</title>
     <link th:href="@{/css/account.css}" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +16,8 @@
                 </div>
                 <div class="mb-3">
                     <input type="number" class="form-control border-0 border-bottom" min="0" th:field="*{money}"
-                        onkeyup="onMoneyKeyUp(event)">
+                        onkeyup="onMoneyKeyUp(this)">
+                    <p class="text-danger" th:if="${#fields.hasErrors('money')}">가격 정보 오류</p>
                 </div>
                 <div class="mb-3">
                     <input type="text" class="form-control border-0 border-bottom" placeholder="상세 내역을 입력해 주세요."
@@ -31,7 +32,7 @@
                                        th:checked="${target.id == account.targetId} ? 'true'">
                                 <label class="form-check-label" th:for="|targetRadio${target.id}|">
                                     <div class="d-flex flex-column align-items-center">
-                                        <img class="target-icon" th:src="@{|/images/target/${target.targetIcon}|}">
+                                        <img class="target-icon" th:src="@{/images/target/{icon}(icon=${target.targetIcon})}">
                                         <span th:text="${target.name}">name</span>
                                     </div>
                                 </label>
@@ -61,14 +62,30 @@
                 </div>
                 <hr/>
                 <div>
-                    <button type="submit" class="btn btn-success">저장</button>
+                    <button type="submit" class="btn btn-success">수정</button>
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">삭제</button>
                     <a type="button" class="btn btn-secondary" role="button" href="javascript:history.back()">취소</a>
                 </div>
             </div>
         </form>
+        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <p>정말 삭제 할까요?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+                        <button type="button" class="btn btn-primary" th:accountId="${account.id}"
+                                th:onclick="onDeleteClick(this.getAttribute('accountId'))">확인</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </th:block>
     <th:block layout:fragment="scripts">
-        <script th:src="@{/js/account_register.js}"></script>
+        <script th:src="@{/libs/rolldate.min.js}"></script>
+        <script th:src="@{/js/account_detail.js}"></script>
     </th:block>
 </body>
 </html>
