--- a/src/main/resources/templates/contents/settings/budget/detail.html
+++ b/src/main/resources/templates/contents/settings/budget/detail.html
@@ -11,7 +11,7 @@
             <div class="p-3">
                 <div class="mb-3">
                     <input type="number" class="form-control border-0 border-bottom" min="0" th:field="*{money}"
-                           onkeyup="onMoneyKeyUp(event)">
+                           onkeyup="onMoneyKeyUp(this)">
                 </div>
                 <div>
                     <button type="submit" class="btn btn-success">수정</button>
