[예산보기]-[아이템상세] 아이템 수정 기능 추가 BFCache 동작 시 새로고침 기능 추가

--- a/src/main/resources/templates/contents/etc/success_or_error.html
+++ b/src/main/resources/templates/contents/etc/success_or_error.html
@@ -12,7 +12,13 @@
 
             if (message != null && message.length > 0) {
                 alert(message);
-                history.back();
+            }
+
+            if (url != null && url.length > 0) {
+                location.replace(url);
+            } else {
+                // Fix me : 얼마나 뒤로 가기
+                history.go(-2);
             }
         </script>
     </th:block>
